# Kira-Environment-Manager

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
kira_env_manager/: __init__.py  installer.iss  main.py  pyproject.toml  requirements.txt
kira_env_manager/common/: config.py
kira_env_manager/utils/: helpers.py  instance_manager.py  python_env.py  system_tray.py  tray_manager.py
kira_env_manager/view/: config_page.py  env_page.py  launch_page.py  log_page.py  main_window.py
kira_manager/: __init__.py  main.py
kira_manager/common/: __init__.py  config.py  constants.py
kira_manager/utils/: __init__.py  helpers.py  instance_manager.py  logger.py  network.py  pip_mirrors.py  process_manager.py  project.py  python_env.py
kira_manager/view/: __init__.py  browser_page.py  config_page.py  env_page.py  home_page.py  launch_page.py  log_page.py  main_window.py  project_page.py
scripts/: installer.iss
