[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kira-env-manager"
version = "0.7.0beta"
description = "KiraAI 环境管理工具 — 下载、配置、运行多个 KiraAI 实例"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.0",
    "qfluentwidgets>=1.11.0",
]

[project.scripts]
kira-env-manager = "kira_env_manager.main:main"
